test/Compatibility/throws_identifier.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -parse -primary-file %s -verify -language-version 4

class C<throws> {} // expected-error {{expected an identifier to name generic parameter}}
precedencegroup rethrows {} // expected-error {{expected identifier after 'precedencegroup'}}
